centered modal and fixed spacing issues

--- a/src/Components/RegistrationModal/RegistrationModal.css
+++ b/src/Components/RegistrationModal/RegistrationModal.css
@@ -3,19 +3,19 @@
 .modalBackground {
     width: 100vw;
     height: 100vh;
+    background-color: transparent;
     position: fixed;
+    overflow: hidden;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .modalContainer {
-    width: 425px;
-    height: 250px;
+    height: 300px;
     position: fixed;
     border-radius: 12px;
     background-color: rgb(46, 42, 42);
-    box-shadow: white;
+    box-shadow: white 0px 5px 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,6 +31,8 @@
 }
 
 .header .checkMark {
+    height: 2.5em;
+    width: 3em;
     color: #43C467
 }
 
@@ -48,8 +50,7 @@
 .body p{
     color: white;
     text-align: center;
-    padding-block: 0.5em;
-    font-size: clamp(0.60rem, 1.1vw, 1.1rem);
+    font-size: 25px;
     font-weight: 500;
     font-family: "Lato", sans-serif;
 }
@@ -57,7 +58,7 @@
 .body button{
     border: 1px solid var(--slate);
     border-radius: 4px;
-    background-color: transparent;
+    background-color: #946bde;
     font-family: "Lato", sans-serif;
     font-size: clamp(0.60rem, 1.1vw, 1.2rem);
     outline: none;
@@ -65,7 +66,6 @@
     font-weight: bold;
     width: 6rem;
     cursor: pointer;
-    background-color: #946bde
 }
 
 .body button:hover{
